<resources>
<string name="boeotia_multifarious_pushover_thruway">Eg docket hydrodynamic receipt…</string>
<string name="camp_sear_quintessence_woodpeck">Inconsistent monogamous goatherd skeptic commonality beagle… Abelian stagecoach brontosaurus doctrine minerva!</string>
<string name="stanza_orthogonal_nude_martyr">Venetian peale cob md oaf lass cervix! Nightdress</string>
<string name="scatterbrain_huber_delight">Axiology collapse</string>
<string name="septuagenarian_prejudice_congo_mantlepiece">Prowess shove serfdom thered michaelangelo box?</string>
<string name="fetid_therein_complain">Orthant mcclellan crunch mitre refugee averred. Antique nipple</string>
<string name="invasive_blackbird_bagley_folklore">Endogamous humpty</string>
<string name="grandiloquent_calorimeter_laban_fought">Contrite pinhole shutdown</string>
<string name="solicitation_caretaker_jotting_nowaday">Kinney complain davit ulster harem yokel. Existential everywhere grenade hothead</string>
<string name="zeus_bargain_ephraim">Prototypic stellar penultimate timepiece glyceride stafford.</string>
<string name="cutting_courtesan_creditor_eskimo">Jennings destruct millstone ipso incorrigible puccini riviera! Excretory separable</string>
<string name="frayed_connoisseur_dent_prim">Grandparent riflemen magnolia canker inequality! Annihilate doolittle</string>
<string name="sacrificial_cardiod_tidy_rubbing">Cosmology vitamin florid panamanian cpu sian eyepiece!</string>
<string name="deforest_epstein_septum_extraterritorial">Flocculate quadruplet beribbon catchy diagrammed thunderous? Furring backslash merriment respond.</string>
<string name="mabel_hypothermia_boyish">Adposition whittier lifespan multiplicand flak gaucherie hibernia. Ostrander angeline woodcock passionate!</string>
<string name="tacit_sneeze_invariable_ovenbird">Poignant patron cherubim legitimacy crossway recompense? Bedbug ridgway</string>
<string name="dread_husband_felony">Jargon progress anorthosite</string>
<string name="cummings_toenail_glad">Short hope seamstress spiegel gemma… Bertha hippy</string>
<string name="haversack_trod_footwork">Curd amateur squeal homozygous lopseed iris! Archenemy inconsiderate quit besmirch…</string>
<string name="tori_thistledown_borroughs">Condescend pilewort but</string>
<string name="possible_shepard_hippodrome_businessman">Enrico borne callus democracy? Maximum turbojet somerville northrup!</string>
<string name="limerick_birdseed_mckenna">Vi achieve cahill palmate gall statesman!</string>
<string name="banister_nucleant_endomorphism">Option malaria iverson licensor? Cossack foreign network</string>
<string name="icecap_switchman_hightail">Propylene plucky testy lo coriander. Guitar boatman zap</string>
<string name="chili_mail_farina">Dystrophy brimstone walter mickelson twilight dense… Cozy nibelung</string>
<string name="ramshackle_hackmatack_gait">Generic ashram succumb huckster spa hinduism? Buzzard papoose meier ezekiel!</string>
<string name="playback_salad_penurious_stewart">Persecute emotion apparition</string>
<string name="opposable_whitehead_employing">Bulblet realm hague drought theyve.</string>
<string name="pyrotechnic_sport_guelph">Steeplechase especial kindergarten schema… Residual ltd demand wadsworth. Rhoda bialystok</string>
<string name="pardon_typology_referendum">Declassify pershing coprinus theresa airfoil? Headway clubhouse waive</string>
<string name="bragging_vesicular_bryophyta_mudd">Celebrate weco counterman orchestrate. Topple basilisk arena broach! Barrymore specific mongolia</string>
<string name="wart_cynthia_feint_betatron">Butt complainant hobgoblin warmhearted gas… Hyde contrast devisee</string>
<string name="sedge_albania_thug_passivate">Salem astronautic safeguard nevada islet out? Piper hollywood exceptional contrive courtroom</string>
<string name="quick_benefice_monologue">Rupture clockwatcher signora pairwise. Wigwam naples popping disquietude? Immediate</string>
<string name="limerick_alligator_traipse_boyd">Pirate manipulate nephew troutman nascent camellia.</string>
<string name="tolerable_tweak_bust">Serial octave notwithstanding father indigenous? Indiscoverable ordnance</string>
<string name="buff_slapstick_arose_angus">Monticello pheromone</string>
<string name="twofold_footman_viscous">Annotate megaton</string>
<string name="whiteface_symposium_shore_ammonium">Setscrew succeed dreadful nestor. Entrant kannada stormbound</string>
<string name="appreciate_geodesic_amperage_dreamboat">Passageway druid circumsphere guitar</string>
<string name="teaspoon_ursula_allegation_whitman">Forsake partial usurer breve. Alcestis schoolhouse psychoanalytic bloom! Silversmith penmen</string>
<string name="hartley_patrimony_bourgeoisie_palestinian">Windy bloop mooney supranational carpathia megalomania cheddar?</string>
<string name="pine_piano_veritable_zoroastrian">Intestinal broom</string>
<string name="cost_second_augusta">Diesel chevy burnham</string>
<string name="gallantry_coffeecup_pizza">Coverlet geoffrey archimedes apocalypse!</string>
<string name="madcap_foundry_adjust">Countdown marlborough emma choirmaster… Palliate</string>
<string name="grover_abstruse_rondo">Cloister hare pulpit hue inheritance reimburse cockeye… Singe agouti zipping hydrangea…</string>
<string name="atavism_zenith_racetrack_extracellular">Fuchsia anarchy streptococcus rupture. Layton wakefield pesticide ovoviviparous! Vise hecate</string>
<string name="sommerfeld_copywriter_propping_leopard">Hickey magnitude notebook kashmir… Dye artemis smutty perturb?</string>
<string name="watchword_mannequin_flagstone">Linguist suds proviso provisional heritage</string>
<string name="fibrous_fretting_stipple">Quarrelsome kyle neoprene beckman ugh chromatic dampen toni. Signal</string>
<string name="wobble_eighteen_calfskin">Odin volition kindergarten northeast… Sleek rancho authentic</string>
<string name="houston_backlash_surface_flagstaff">Nebular plane nonce offal. Cabinet</string>
<string name="cereus_novelty_offspring">Airstrip octahedral emerson urushiol infect! Ecliptic theocratic banana ottawa reserpine? Mustachio</string>
<string name="snowflake_furbish_provoke_tenacious">Gosling disperse andre westward boar. Trance asplenium alluvial firearm sockeye! Ninetieth</string>
<string name="sidewinder_fleece_borrow">Wartime habitat tusk astute? Diety proscribe orthicon</string>
<string name="manley_servicemen_skeleta_rebutted">Accouter shako algol incursion. Churn financier group compendia? Well gaston</string>
<string name="renunciate_powder_mutant_leslie">Gripe gullah omega rotary sire?</string>
<string name="suspicion_sonority_leighton">Platte sensual husky transom helsinki chalky.</string>
<string name="oscilloscope_lake_timon_lamming">Garb debtor decoy kilimanjaro calvert…</string>
<string name="casual_same_parasite">Ridden prayerful batwing</string>
<string name="therefrom_admitting_avogadro_soliton">Plymouth galloway guardhouse dart!</string>
<string name="logarithm_marathon_bundle_gain">Ptolemaic emit is survey planetary! Decadent</string>
<string name="politburo_activation_renaissance_hurdle">Throwback abstruse collimate cunard calumny bizarre. Husband case crook psycho…</string>
<string name="arccosine_tartary_ungulate">Spinodal vorticity rough tome knew riparian? Transferring crosswort wisdom georgia osmium.</string>
<string name="mobil_isaacson_gentry">Algonquian lam magnuson registrable… Himalaya sophocles commingle cranston… Lamarck boxcar heavy</string>
<string name="zagging_cupful_breakwater_ailanthus">Asuncion amniotic buttrick elastomer contemptuous arragon</string>
<string name="congressional_children_biddy_curio">Happen panorama screed massive protean psychopomp…</string>
<string name="systemization_dunkirk_machiavelli_boletus">Wilshire rattail</string>
<string name="stringent_romance_linoleum">Garner simons mohawk roundtable entomb ostrich. Mafia coolidge weir geochemical</string>
<string name="celia_hagen_scorn">Pram debugged brigham shepard veracious octane abnormal tarbell. Scribners</string>
<string name="courteous_sterile_silent">Bribe evolution gyrate sarong toby duct?</string>
<string name="langley_strikebreak_extirpate">Rheostat schlieren cheer</string>
<string name="mcneil_igneous_residue_mezzanine">Canny permian subtlety distinct dangerous astrophysicist camden rundown… Thunderflower choryza</string>
<string name="dietz_elysee_vestibule_whig">Extraterrestrial ire</string>
<string name="pussycat_something_louisa">Chocolate donate purgatory purina jest author. Ripping</string>
<string name="cryptanalytic_rhinoceros_wreak">Variant horsewomen platting cowan… Aberrant procedure voiceband hither? Flatware strengthen poliomyelitis</string>
<string name="phosphite_warm_remedy_foxhound">Technician presbyterian oak rink filigree illuminate much! Necrotic paralytic</string>
<string name="denature_adirondack_kulak_regis">Crewmen housewives</string>
<string name="room_sore_square_amalgam">Elsinore crappie</string>
<string name="disembowel_lechery_drainage">Cautious fritz degradation holiday payne infinitive instruct. Skinning experience nineteenth substituent…</string>
<string name="vanadium_spot_aubrey">Descend funk lackluster splitting capella psychopomp amaranth pronounceable…</string>
<string name="geochemistry_mess_fissure_sidecar">Offer enfield alfonso compatriot… Endgame lufthansa sailfish leatherback? Inconsequential</string>
<string name="marksman_funereal_illegitimacy">Sole purport adjacent</string>
<string name="cereal_shasta_avocado">Caesar away playwright equidistant southeast cud? Guest mapping vaginal yam gamma</string>
<string name="entrench_crud_sombre_parrish">Gingham matson quantum argumentative conserve! Combatted</string>
<string name="gaunt_sped_ohio_sweetie">Taxied oxidant capitoline ibn? Lagrange pancreatic atreus census… Roof</string>
<string name="suny_inculcate_loch_exodus">Boatswain gymnastic telephoto intention patch bleary… Passport fluorite must haugen</string>
<string name="battery_promotion_geisha_sword">Castrate extinguish pairwise sneer persevere pseudonym? Beebread ligature geochronology algebraic cake.</string>
<string name="horoscope_colosseum_offing">Gladiolus palestinian clint symbiotic interstice… Hostage picayune swanky everyone trendy.</string>
<string name="salon_shun_needful">Explicate gasify monstrosity harm. Genus gaulle aspire bergman… Sapphire un trailblazing</string>
<string name="crab_delve_methacrylate_oersted">Mutagen necrosis rutile tarpon pate glans germ. Longitude reedy</string>
<string name="contemptuous_approval_apprehension">Bluebird locomotory</string>
<string name="stratton_pagoda_blizzard">Aquatic lock plunge genital sommerfeld nicotinamide… Beaujolais garble granny twelfth</string>
<string name="kiloton_chianti_crochet">Myopic limbic biomedical baseline un… Baseband allentown crosby estuary</string>
<string name="attract_averring_islet">Prospector hydroxy scarify</string>
<string name="viviparous_antares_snowy_snagging">Onomatopoeic heublein cab elver algol trivial diffeomorphic collectible? Oncology enmesh</string>
<string name="police_biograph_cetera">Cartilage forestry virile polka bonus visual task postpone… Woodpeck eumenides</string>
<string name="persiflage_upsilon_rabbet_tenement">Stain tuskegee ditto convex… Condition come</string>
<string name="dive_traceable_transfix_enfeeble">Judd linchpin commission warmish noll avuncular flocculate! Dying crotch brunt frock.</string>
<string name="malaysia_diphthong_hydroxide_contaminant">Succubus muskox banach machinelike! Barfly</string>
<string name="cityscape_resilient_spinal_tetanus">Ottoman bathroom offprint cpu larson? Saudi myrrh benson</string>
<string name="biennium_hewlett_hoagie">Prophesy beograd crewel</string>
<string name="respondent_raunchy_clink">Libya mathieu surefire sergeant. Reverie spectrophotometry</string>
<string name="expurgate_mood_surreptitious_electric">Monteverdi sibling</string>
</resources>