<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/diffractLayout" android:layout_height="wrap_content" android:layout_width="@dimen/uremia_ursula_size" app:layout_constraintBottom_toTopOf="@id/transductionView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<CheckedTextView android:background="#E05601D5" android:hint="@string/gallantry_coffeecup_pizza" android:id="@+id/magnoliaView" android:layout_height="wrap_content" android:layout_width="328dp" android:text="@string/persiflage_upsilon_rabbet_tenement" android:textColor="@color/aerofoil_strobe_polyandry" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<CheckBox android:background="@color/surjective_eldon" android:hint="@string/malaysia_diphthong_hydroxide_contaminant" android:id="@+id/transductionView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/stanza_orthogonal_nude_martyr" android:textColor="@color/fate_wail_behest" android:textSize="@dimen/entree_steeple_textsize" app:layout_constraintBottom_toTopOf="@id/herdsmanLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/diffractLayout"/>
<LinearLayout android:gravity="center_horizontal" android:id="@+id/herdsmanLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/impaleView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/transductionView">
<EditText android:background="@color/cambrian_hearken" android:hint="@string/salon_shun_needful" android:id="@+id/yearbookView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/platonist_amherst_padding" android:text="@string/limerick_alligator_traipse_boyd" android:textColor="@color/loquat_gentlewoman_yellowish"/>
<TextView android:background="@color/respecter_opportune" android:hint="@string/buff_slapstick_arose_angus" android:id="@+id/shortenView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/biennium_hewlett_hoagie" android:textColor="@color/thatll_isomer_thought"/>
<LinearLayout android:gravity="center" android:id="@+id/buttonweedLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" android:paddingEnd="@dimen/scribners_hirsute_padding" android:paddingStart="12dp">
<Button android:background="#E22FADD6" android:hint="@string/grover_abstruse_rondo" android:id="@+id/pierceView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/wobble_eighteen_calfskin" android:textColor="@color/familiar_backstitch" android:textSize="@dimen/doldrum_antoine_textsize"/>
<CheckBox android:hint="@string/teaspoon_ursula_allegation_whitman" android:id="@+id/oceanView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/phosphite_warm_remedy_foxhound" android:textColor="@color/dread_dutch"/>
<CheckBox android:background="#ECD96B4B" android:hint="@string/bragging_vesicular_bryophyta_mudd" android:id="@+id/threonineView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/arccosine_tartary_ungulate"/>
<LinearLayout android:gravity="bottom|center_vertical" android:id="@+id/videLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" android:paddingBottom="@dimen/iceberg_weco_margin" android:paddingTop="20dp">
<AutoCompleteTextView android:hint="@string/therefrom_admitting_avogadro_soliton" android:id="@+id/mediterraneanConfineView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/chrysolite_balfour_width" android:text="@string/langley_strikebreak_extirpate"/>
<CheckedTextView android:background="@color/usurpation_transliterate_chemic" android:hint="@string/disembowel_lechery_drainage" android:id="@+id/tulsaPowellView" android:layout_height="wrap_content" android:layout_margin="@dimen/woebegone_niger_margin" android:layout_width="wrap_content" android:text="@string/playback_salad_penurious_stewart" android:textColor="@color/grudge_teal_corps"/>
<AutoCompleteTextView android:background="@color/theyre_precipitous_neve" android:hint="@string/suny_inculcate_loch_exodus" android:id="@+id/swahiliMinotView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="38dp" android:text="@string/possible_shepard_hippodrome_businessman" android:textColor="@color/henley_rectory_peregrine"/>
<EditText android:background="@color/weigh_stuck" android:hint="@string/banister_nucleant_endomorphism" android:id="@+id/scramArgusView" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/watchword_mannequin_flagstone"/>
</LinearLayout>
<CheckedTextView android:background="@color/fortescue_thyrotoxic_scudding" android:hint="@string/chili_mail_farina" android:id="@+id/dumpyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="36dp" android:paddingBottom="@dimen/austria_introductory_padding" android:paddingEnd="@dimen/canfield_minnesota_padding" android:paddingStart="40dp" android:text="@string/atavism_zenith_racetrack_extracellular" android:textSize="12sp"/>
<AutoCompleteTextView android:hint="@string/pussycat_something_louisa" android:id="@+id/intemperanceView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cereal_shasta_avocado" android:textSize="26sp"/>
<AutoCompleteTextView android:background="@color/manslaughter_patient_faber" android:hint="@string/tori_thistledown_borroughs" android:id="@+id/grownupView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/pine_piano_veritable_zoroastrian" android:textColor="@color/conductor_earphone_defect"/>
</LinearLayout>
<CheckBox android:background="#E0884B8F" android:hint="@string/cereus_novelty_offspring" android:id="@+id/indecisionView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/babcock_geodetic_padding" android:paddingEnd="@dimen/warmth_spectator_width" android:paddingStart="32dp" android:text="@string/snowflake_furbish_provoke_tenacious" android:textColor="#F30878"/>
<TextView android:background="@color/seaborg_bristlecone_mabel" android:hint="@string/sedge_albania_thug_passivate" android:id="@+id/seemSheilaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/stratton_pagoda_blizzard" android:textColor="@color/spider_norse"/>
<EditText android:background="@color/diffusible_siva" android:hint="@string/politburo_activation_renaissance_hurdle" android:id="@+id/falloutView" android:inputType="textPassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/expurgate_mood_surreptitious_electric"/>
</LinearLayout>
<AutoCompleteTextView android:background="#2E8F5104" android:hint="@string/kiloton_chianti_crochet" android:id="@+id/impaleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cummings_toenail_glad" android:textColor="@color/blab_sylvan_libation" app:layout_constraintBottom_toTopOf="@id/merrimackNineView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/herdsmanLayout"/>
<CheckBox android:background="@color/menorca_thyme" android:hint="@string/mabel_hypothermia_boyish" android:id="@+id/merrimackNineView" android:layout_height="wrap_content" android:layout_width="378dp" android:text="@string/congressional_children_biddy_curio" android:textColor="#2CD642" android:textSize="@dimen/respond_impregnable_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/impaleView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
