<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="center_horizontal|start" android:id="@+id/sheratonLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/papooseView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<TextView android:background="@color/ligand_cadmium" android:hint="@string/icecap_switchman_hightail" android:id="@+id/presumingView" android:layout_height="wrap_content" android:layout_marginEnd="36dp" android:layout_marginStart="@dimen/marlin_castillo_width" android:layout_width="wrap_content" android:text="@string/room_sore_square_amalgam"/>
<AutoCompleteTextView android:background="@color/mollify_gist" android:hint="@string/sidewinder_fleece_borrow" android:id="@+id/testView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/seaworthy_lame_margin" android:text="@string/twofold_footman_viscous" android:textColor="@color/holm_clomp" android:textSize="@dimen/sobriquet_beaumont_textsize"/>
<LinearLayout android:gravity="center" android:id="@+id/lexicographyDoubtLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
<AutoCompleteTextView android:background="#876CBA" android:hint="@string/wart_cynthia_feint_betatron" android:id="@+id/wheelView" android:layout_height="wrap_content" android:layout_margin="@dimen/squall_quotation_padding" android:layout_width="wrap_content" android:text="@string/quick_benefice_monologue" android:textColor="@color/coriander_schooner" android:textSize="12sp"/>
<AutoCompleteTextView android:background="#B4624F" android:hint="@string/sommerfeld_copywriter_propping_leopard" android:id="@+id/theresaSubsumingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tolerable_tweak_bust" android:textColor="@color/weigh_stuck"/>
<EditText android:background="@color/jung_anyway_scientist" android:hint="@string/systemization_dunkirk_machiavelli_boletus" android:id="@+id/bickerTreasonView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_margin="48dp" android:layout_width="wrap_content" android:text="@string/stringent_romance_linoleum" android:textColor="@color/typic_swingable"/>
</LinearLayout>
<AutoCompleteTextView android:background="@color/pave_xylophone" android:hint="@string/battery_promotion_geisha_sword" android:id="@+id/lexicographerView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="42dp" android:text="@string/respondent_raunchy_clink" android:textColor="@color/bayport_battlefront_opal" android:textSize="@dimen/exaltation_mafioso_textsize"/>
<CheckBox android:background="@color/schoolmarm_silk" android:hint="@string/pyrotechnic_sport_guelph" android:id="@+id/oftentimesView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/squall_mackinaw_padding" android:text="@string/ramshackle_hackmatack_gait" android:textColor="#153B4E"/>
<AutoCompleteTextView android:background="@color/alderman_buckaroo" android:hint="@string/mcneil_igneous_residue_mezzanine" android:id="@+id/danishView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/courteous_sterile_silent" android:textColor="@color/stink_collegiate"/>
<EditText android:background="@color/quintillion_ineluctable" android:hint="@string/suspicion_sonority_leighton" android:id="@+id/bayonetView" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_margin="@dimen/potato_bromfield_margin" android:layout_width="wrap_content" android:text="@string/houston_backlash_surface_flagstaff" android:textSize="@dimen/sprue_urinate_textsize"/>
<CheckedTextView android:background="@color/fairfax_syllabi" android:hint="@string/entrench_crud_sombre_parrish" android:id="@+id/martyCamelbackView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/contemptuous_approval_apprehension" android:textSize="@dimen/peony_smell_textsize"/>
</LinearLayout>
<CheckedTextView android:background="#CBE2D776" android:hint="@string/zagging_cupful_breakwater_ailanthus" android:id="@+id/papooseView" android:layout_height="wrap_content" android:layout_width="@dimen/mortgagee_implicate_width" android:text="@string/cryptanalytic_rhinoceros_wreak" android:textSize="@dimen/peony_smell_textsize" app:layout_constraintBottom_toTopOf="@id/cloudburstCoverallView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sheratonLayout"/>
<EditText android:background="@color/fate_wail_behest" android:hint="@string/police_biograph_cetera" android:id="@+id/cloudburstCoverallView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="@dimen/batavia_meter_size" android:text="@string/casual_same_parasite" android:textColor="#5FF5415E" app:layout_constraintBottom_toTopOf="@id/louisaMilesView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/papooseView"/>
<EditText android:background="@color/bart_neurosis" android:hint="@string/haversack_trod_footwork" android:id="@+id/louisaMilesView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/logarithm_marathon_bundle_gain" android:textColor="#C42E11" android:textSize="@dimen/liable_ieee_textsize" app:layout_constraintBottom_toTopOf="@id/civilianView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cloudburstCoverallView"/>
<Button android:background="#149980" android:hint="@string/hartley_patrimony_bourgeoisie_palestinian" android:id="@+id/civilianView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/helium_password_height" android:layout_marginStart="42dp" android:layout_width="wrap_content" android:text="@string/whiteface_symposium_shore_ammonium" android:textColor="@color/fortescue_thyrotoxic_scudding" app:layout_constraintBottom_toTopOf="@id/handyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/louisaMilesView"/>
<Button android:background="#538E09F5" android:hint="@string/madcap_foundry_adjust" android:id="@+id/handyView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/viviparous_antares_snowy_snagging" android:textColor="#408A9BE9" app:layout_constraintBottom_toTopOf="@id/sariLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/civilianView"/>
<LinearLayout android:gravity="center_horizontal" android:id="@+id/sariLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/oncologyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/handyView">
<Button android:hint="@string/tacit_sneeze_invariable_ovenbird" android:id="@+id/calciumView" android:layout_height="wrap_content" android:layout_margin="@dimen/pickaxe_airport_size" android:layout_width="wrap_content" android:text="@string/attract_averring_islet" android:textColor="@color/manslaughter_eileen" android:textSize="@dimen/casino_bowline_textsize"/>
<AutoCompleteTextView android:background="@color/brevet_amateurish" android:hint="@string/marksman_funereal_illegitimacy" android:id="@+id/amethystView" android:layout_height="wrap_content" android:layout_margin="28dp" android:layout_width="wrap_content" android:text="@string/vanadium_spot_aubrey" android:textColor="@color/love_loudspeaking_aurochs"/>
<CheckBox android:hint="@string/dive_traceable_transfix_enfeeble" android:id="@+id/scarfView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sacrificial_cardiod_tidy_rubbing" android:textColor="@color/fate_wail_behest"/>
<CheckedTextView android:background="@color/nabisco_hurst_thermionic" android:hint="@string/opposable_whitehead_employing" android:id="@+id/gabonRoteView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fibrous_fretting_stipple" android:textColor="@color/locksmith_concurrent_cultural"/>
</LinearLayout>
<Button android:background="@color/drafty_orifice" android:hint="@string/appreciate_geodesic_amperage_dreamboat" android:id="@+id/oncologyView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/mobil_isaacson_gentry" android:textColor="@color/fairfax_syllabi" app:layout_constraintBottom_toTopOf="@id/canterburyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sariLayout"/>
<CheckedTextView android:hint="@string/denature_adirondack_kulak_regis" android:id="@+id/canterburyView" android:layout_height="wrap_content" android:layout_margin="@dimen/renunciate_razzle_padding" android:layout_width="wrap_content" android:padding="20dp" android:text="@string/cost_second_augusta" android:textColor="@color/fluster_handicraft_lottery" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/oncologyView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
