<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="start" android:id="@+id/tallowMuezzinLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/shenaniganView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<CheckBox android:hint="@string/geochemistry_mess_fissure_sidecar" android:id="@+id/poppingColatitudeView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/mcneil_igneous_residue_mezzanine" android:textColor="@color/handy_anonymity"/>
<TextView android:background="@color/maxwellian_exert" android:hint="@string/manley_servicemen_skeleta_rebutted" android:id="@+id/netherworldIrksomeView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/beech_casino_padding" android:layout_marginStart="@dimen/duchess_fluid_padding" android:layout_width="wrap_content" android:text="@string/dietz_elysee_vestibule_whig" android:textColor="@color/bathe_styli"/>
<TextView android:background="@color/impalpable_coercive_casanova" android:hint="@string/therefrom_admitting_avogadro_soliton" android:id="@+id/ultrasonicView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/buff_slapstick_arose_angus"/>
<Button android:background="@color/roundabout_ledge" android:hint="@string/pardon_typology_referendum" android:id="@+id/pluckView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/wart_cynthia_feint_betatron" android:textColor="#8A26EE86"/>
<Button android:background="#5699B870" android:hint="@string/crab_delve_methacrylate_oersted" android:id="@+id/kowalewskiLawgiveView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/severn_loose_margin" android:layout_marginTop="@dimen/veranda_alistair_size" android:layout_width="wrap_content" android:text="@string/limerick_birdseed_mckenna" android:textColor="@color/practitioner_trisyllable"/>
</LinearLayout>
<CheckedTextView android:background="@color/bituminous_streamline" android:hint="@string/horoscope_colosseum_offing" android:id="@+id/shenaniganView" android:layout_height="wrap_content" android:layout_margin="@dimen/sturgeon_deserve_margin" android:layout_width="wrap_content" android:text="@string/renunciate_powder_mutant_leslie" android:textColor="@color/bart_neurosis" app:layout_constraintBottom_toTopOf="@id/souffleView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tallowMuezzinLayout"/>
<TextView android:background="@color/bathe_styli" android:hint="@string/oscilloscope_lake_timon_lamming" android:id="@+id/souffleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/dread_husband_felony" app:layout_constraintBottom_toTopOf="@id/euclideanView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/shenaniganView"/>
<CheckBox android:background="@color/clove_curia" android:hint="@string/marksman_funereal_illegitimacy" android:id="@+id/euclideanView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/gaunt_sped_ohio_sweetie" android:textColor="@color/seminal_theodosian" app:layout_constraintBottom_toTopOf="@id/bridgeworkIntermitView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/souffleView"/>
<Button android:background="#5CF40F55" android:hint="@string/celia_hagen_scorn" android:id="@+id/bridgeworkIntermitView" android:layout_height="wrap_content" android:layout_margin="34dp" android:layout_width="@dimen/effectuate_vetch_width" android:text="@string/cityscape_resilient_spinal_tetanus" android:textColor="@color/northward_rutile_multitude" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/euclideanView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
